<resources>
    <string name="app_name">strongholdTestApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_events">Events</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_event_tab_name">Add</string>
    <string name="past_events_tab_name">Past</string>
    <string name="events_tab_name">Events</string>
    <string name="sidebar_scouting">Scouting</string>
    <string name="sidebar_teams">Teams</string>
    <string name="sidebar_rankings">Rankings</string>
<<<<<<< Updated upstream
    <string name="team_selection_question">Team Selection</string>
=======
    <string name="event_name">Event Name</string>
    <string name="add_event">Add Event</string>
    <string name="start_event">Start Date</string>
    <string name="end_event">End Date</string>
    <string name="add">Add</string>
>>>>>>> Stashed changes
</resources>