<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:gravity="center"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/add_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textSize="18sp"
        android:textColor="?attr/colorOnSecondary"/>

    <EditText
        android:id="@+id/t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    <TextView
        android:id="@+id/start_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_event"
        android:textSize="18sp"
        android:textColor="?attr/colorOnSecondary"/>

    <EditText
        android:id="@+id/th"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    <TextView
        android:id="@+id/end_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_event"
        android:textSize="18sp"
        android:textColor="?attr/colorOnSecondary"/>

    <EditText
        android:id="@+id/eee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>